chrome/browser/ui/views/omnibox/rounded_omnibox_results_frame.cc
@@ -93,7 +93,7 @@ int RoundedOmniboxResultsFrame::GetNonResultSectionHeight() {
 
 // static
 gfx::Insets RoundedOmniboxResultsFrame::GetLocationBarAlignmentInsets() {
-  return ui::MaterialDesignController::IsRefreshUi() ? gfx::Insets(5, 6)
+  return ui::MaterialDesignController::IsRefreshUi() ? gfx::Insets(5, 6, 4, 6)
                                                      : gfx::Insets(4);
 }
 
